--- a/src/main/resources/css/initialization.css
+++ b/src/main/resources/css/initialization.css
@@ -1,4 +1,4 @@
 .root {
-    -fx-background-image: url("/assets/background.jpg");
+    -fx-background-image: url("/assets/background.png");
     -fx-background-size: stretch;
 }
