--- a/src/main/resources/layouts/application_list.fxml
+++ b/src/main/resources/layouts/application_list.fxml
@@ -11,7 +11,7 @@
   <bottom>
     <ToolBar>
       <items>
-        <Button fx:id="addExternalAppBtn" mnemonicParsing="false" text="Add External App..." textAlignment="CENTER" />
+        <!--<Button fx:id="addExternalAppBtn" mnemonicParsing="false" text="Add External App..." textAlignment="CENTER" />-->
         <Pane HBox.hgrow="ALWAYS"/>
         <Button fx:id="cancelBtn" alignment="CENTER" text="Cancel" textAlignment="CENTER" />
         <Button fx:id="selectBtn" alignment="CENTER" text="Select" textAlignment="CENTER" />
