--- a/src/main/resources/layouts/properties/app_property.fxml
+++ b/src/main/resources/layouts/properties/app_property.fxml
@@ -7,7 +7,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox alignment="TOP_CENTER" xmlns="http://javafx.com/javafx/8" maxWidth="Infinity" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.editor.controllers.ApplicationPropertyController">
+<VBox alignment="TOP_CENTER" maxWidth="Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.editor.controllers.ApplicationPropertyController">
    <children>
       <Label fx:id="appTitleLabel" text="Google Chrome">
          <font>
@@ -19,6 +19,16 @@
             <Insets top="10.0" />
          </VBox.margin>
       </ImageView>
+      <Label maxWidth="1.7976931348623157E308" text="Path">
+         <VBox.margin>
+            <Insets left="10.0" />
+         </VBox.margin>
+      </Label>
+      <TextField fx:id="pathTextField" editable="false">
+         <VBox.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" />
+         </VBox.margin>
+      </TextField>
       <Button fx:id="changeAppBtn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Change Application...">
          <VBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
