--- a/src/main/resources/layouts/shortcut_icon_list.fxml
+++ b/src/main/resources/layouts/shortcut_icon_list.fxml
@@ -7,21 +7,21 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.paint.*?>
 
-<BorderPane prefHeight="550" prefWidth="350" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="app.editor.controllers.AppListController">
+<BorderPane prefHeight="500" prefWidth="300" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.editor.controllers.ShortcutIconListController">
   <top>
-    <TextField fx:id="searchTextField" promptText="Search Application..." />
+    <TextField fx:id="searchTextField" promptText="Search icon..." />
   </top>
   <bottom>
     <ToolBar>
       <items>
         <!--<Button fx:id="addExternalAppBtn" mnemonicParsing="false" text="Add External App..." textAlignment="CENTER" />-->
-        <Pane HBox.hgrow="ALWAYS"/>
+        <Pane HBox.hgrow="ALWAYS" />
         <Button fx:id="cancelBtn" alignment="CENTER" text="Cancel" textAlignment="CENTER" />
         <Button fx:id="selectBtn" alignment="CENTER" text="Select" textAlignment="CENTER" />
       </items>
     </ToolBar>
   </bottom>
   <center>
-    <ListView fx:id="appListView" prefHeight="200.0" prefWidth="200.0" />
+    <ListView fx:id="shortcutListView" prefHeight="200.0" prefWidth="200.0" />
   </center>
 </BorderPane>
