--- a/src/main/resources/layouts/section_editor.fxml
+++ b/src/main/resources/layouts/section_editor.fxml
@@ -60,24 +60,8 @@
   <top>
     <VBox prefHeight="-1.0" prefWidth="-1.0">
       <children>
-        <MenuBar>
-          <menus>
-            <Menu mnemonicParsing="false" text="File">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Close" />
-              </items>
-            </Menu>
-            <Menu mnemonicParsing="false" text="Edit">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Delete" />
-              </items>
-            </Menu>
-            <Menu mnemonicParsing="false" text="Help">
-              <items>
-                <MenuItem mnemonicParsing="false" text="About" />
-              </items>
-            </Menu>
-          </menus>
+        <MenuBar fx:id="menuBar">
+
         </MenuBar>
         <ToolBar>
           <items>
