--- a/src/main/resources/css/editor.css
+++ b/src/main/resources/css/editor.css
@@ -2,8 +2,12 @@
     -fx-opacity: 0.5;
 }
 
-.bottombar {
+.bottombar-portrait {
     -fx-padding: 10 0 0 0;
+}
+
+.bottombar-landscape {
+    -fx-padding: 0 10 0 0;
 }
 
 .drag-entered {
