--- a/src/main/resources/css/editor.css
+++ b/src/main/resources/css/editor.css
@@ -14,6 +14,10 @@
     -fx-background-color: #6cac6a;
 }
 
+.drag-entered-danger {
+    -fx-background-color: #b85152;
+}
+
 .selected {
     -fx-background-color: #dada67;
 }
