--- a/src/main/resources/layouts/settings_dialog.fxml
+++ b/src/main/resources/layouts/settings_dialog.fxml
@@ -1,51 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="447.0"
-            prefWidth="579.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="app.editor.controllers.SettingsController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="447.0" prefWidth="579.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.UIControllers.SettingsController">
     <center>
         <TabPane tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
             <tabs>
                 <Tab text="General">
                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0"/>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" />
                     </content>
                 </Tab>
                 <Tab text="Applications">
                     <content>
                         <BorderPane>
                             <center>
-                                <ListView fx:id="externalAppListView"
-                                          BorderPane.alignment="CENTER">
+                                <ListView fx:id="externalAppListView" BorderPane.alignment="CENTER">
                                     <BorderPane.margin>
-                                        <Insets bottom="6.0" left="6.0" right="6.0" top="6.0"/>
+                                        <Insets bottom="6.0" left="6.0" right="6.0" top="6.0" />
                                     </BorderPane.margin>
                                 </ListView>
                             </center>
                             <top>
                                 <Label text="External Applications" BorderPane.alignment="TOP_LEFT">
                                     <BorderPane.margin>
-                                        <Insets left="6.0" right="6.0" top="6.0"/>
+                                        <Insets left="6.0" right="6.0" top="6.0" />
                                     </BorderPane.margin>
                                 </Label>
                             </top>
                             <bottom>
-                                <Button fx:id="addApplicationBtn" mnemonicParsing="false" text="Add Application..."
-                                        BorderPane.alignment="TOP_RIGHT">
+                                <Button fx:id="addApplicationBtn" mnemonicParsing="false" text="Add Application..." BorderPane.alignment="TOP_RIGHT">
                                     <BorderPane.margin>
-                                        <Insets bottom="6.0" right="6.0"/>
+                                        <Insets bottom="6.0" right="6.0" />
                                     </BorderPane.margin>
                                 </Button>
                             </bottom>
                         </BorderPane>
                     </content>
                 </Tab>
+            <Tab text="Advanced">
+               <content>
+                  <VBox prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <TitledPane animated="false" collapsible="false" text="Cache and Data">
+                           <content>
+                              <HBox alignment="CENTER_LEFT">
+                                 <children>
+                                    <Label text="Clear the application cache. NOTE: the app must be restarted afterwards." />
+                                    <Pane HBox.hgrow="ALWAYS" />
+                                    <Button fx:id="clearCacheBtn" mnemonicParsing="false" text="Clear Cache" textAlignment="CENTER">
+                                       <HBox.margin>
+                                          <Insets left="20.0" />
+                                       </HBox.margin>
+                                    </Button>
+                                 </children>
+                              </HBox>
+                           </content>
+                        </TitledPane>
+                     </children>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </VBox>
+               </content>
+            </Tab>
             </tabs>
         </TabPane>
     </center>
